RESOLVED FIXED165096
Fix exception scope verification failures in runtime/Weak* files.
https://bugs.webkit.org/show_bug.cgi?id=165096
Summary Fix exception scope verification failures in runtime/Weak* files.
Mark Lam
Reported 2016-11-28 10:31:37 PST
Patch coming.
Attachments
proposed patch. (4.36 KB, patch)
2016-11-28 10:46 PST, Mark Lam
ggaren: review+
Mark Lam
Comment 1 2016-11-28 10:46:53 PST
Created attachment 295502 [details] proposed patch.
Mark Lam
Comment 2 2016-11-28 12:21:42 PST
Comment on attachment 295502 [details] proposed patch. This patch has passed the JSC tests locally. It's ready for a review.
Geoffrey Garen
Comment 3 2016-11-28 12:28:08 PST
Comment on attachment 295502 [details] proposed patch. r=me
Mark Lam
Comment 4 2016-11-28 14:40:02 PST
Thanks for the review. Landed in r209023: <http://trac.webkit.org/r209023>.
Note You need to log in before you can comment on or make changes to this bug.