Fix exception scope verification failures in runtime/Weak* files. https://bugs.webkit.org/show_bug.cgi?id=165096

Reviewed by Geoffrey Garen.

* runtime/WeakMapConstructor.cpp:
(JSC::constructWeakMap):
* runtime/WeakMapPrototype.cpp:
(JSC::protoFuncWeakMapSet):
* runtime/WeakSetConstructor.cpp:
(JSC::constructWeakSet):
* runtime/WeakSetPrototype.cpp:
(JSC::protoFuncWeakSetAdd):



Canonical link: https://commits.webkit.org/182728@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@209023 268f45cc-cd09-0410-ab3c-d52691b4dbfc