Source/JavaScriptCore/runtime/WeakSetPrototype.cpp
@@ -92,6 +92,7 @@ EncodedJSValue JSC_HOST_CALL protoFuncWeakSetAdd(CallFrame* callFrame)
     auto scope = DECLARE_THROW_SCOPE(vm);
 
     WeakMapData* map = getWeakMapData(callFrame, callFrame->thisValue());
+    ASSERT(!!scope.exception() == !map);
     if (!map)
         return JSValue::encode(jsUndefined());
     JSValue key = callFrame->argument(0);
